--- a/gp0/gp0/Views/Home/SendDoc.cshtml
+++ b/gp0/gp0/Views/Home/SendDoc.cshtml
@@ -36,7 +36,7 @@
     <p class="info_field" id="Success1"></p>
     <div id="textArea" hidden="true">
         <p id="info_receiver">Данные для подписи:</p>
-        <textarea id="DataToSignTxtBox" name="DataToSignTxtBox" style="height:200px;width:100%;resize:none;border:1;"></textarea>
+        <textarea id="DataToSignTxtBox" name="DataToSignTxtBox" style="height:200px;width:100%;resize:none;border:1px solid lightgray;"></textarea>
         <button id="SignBtn" name="SignData" type="button" class="btn btn-secondary btn-block" onclick="SendXml('CertListBox',null);">Подписать</button>
     </div>
 </div>
