--- a/gp0/gp0/Views/Home/inDocument.cshtml
+++ b/gp0/gp0/Views/Home/inDocument.cshtml
@@ -4,11 +4,14 @@
 }
 <body>
 <div>
-    <h3>Текст сообщения: </h3>
+    <h4>Текст сообщения: </h4>
     <textarea style="height: 300px; width: 100%; resize: none; border: 1px solid lightgray;" readonly="readonly" id="Text">@Model.text</textarea>
-    <h3>Дата отправки: @Model.date</h3>
+    <h4>Дата отправки: @Model.date</h4>
+    <h4>Отправил: @Model.sender</h4>
     <div>
-        <button class="btn btn-secondary btn-block">Проверить подписи</button>
+        <button class="btn btn-secondary btn-block" onclick="CheckDoc('Text')">Проверить подписи</button>
+        <input hidden="true" name="id" value=@Model.id />
+        <input type="button" asp-controller="Home" asp-action="DeleteInDocument" value="Удалить документ" />
     </div>
 </div>
 </body>
