--- a/gp0/gp0/Views/Shared/HomeLayout.cshtml
+++ b/gp0/gp0/Views/Shared/HomeLayout.cshtml
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <script src="~/js/cadesplugin_api.js"></script>
-        <script src="~/js/Code.js"></script>
+        <script src="~/js/code.js"></script>
         <script src="~/js/code_async.js"></script>
     </environment>
     <environment exclude="Development">
