--- a/gp0/gp0/Views/Auth/Login.cshtml
+++ b/gp0/gp0/Views/Auth/Login.cshtml
@@ -14,14 +14,14 @@
         <br />
         <button class="btn btn-secondary btn-block" type="submit">Войти</button>
     </form>
-    <hr />
+    <hr/>
     <div class="table-borderless">
         <h1 class="h3 mb-3 font-weight-normal" align="center">Авторизация по сертификату</h1>
         <div id="panel1" class="tab-pane active">
             <div class="divTableCell">
                 <h3 id="info_msg" name="CertificateTitle">Выберите сертификат:</h3>
                 <div id="item_border" name="CertListBoxToHide">
-                    <select size="10" name="CertListBox" id="CertListBox" style="width: 100%; resize: none; border: 1;"></select>
+                    <select size="10" name="CertListBox" id="CertListBox" style="width: 100%; resize: none; border: 1px solid lightslategray;"></select>
                 </div>
                 <div id="boxdiv" style="display: none">
                     <span id="errorarea">
