--- a/gp0/gp0/Views/Home/SendDoc.cshtml
+++ b/gp0/gp0/Views/Home/SendDoc.cshtml
@@ -8,7 +8,7 @@
             <div class="divTableCell">
                 <h3 id="info_msg" name="CertificateTitle">Выберите сертификат:</h3>
                 <div id="item_border" name="CertListBoxToHide">
-                    <select size="10" name="CertListBox" id="CertListBox" style="width: 100%; resize: none; border: 1;"></select>
+                    <select size="10" name="CertListBox" id="CertListBox" style="width: 100%; resize: none; border: 1px solid lightslategray;"></select>
                 </div>
                 <div id="boxdiv" style="display: none">
                     <span id="errorarea">
