--- a/gp0/gp0/Views/Home/Home.cshtml
+++ b/gp0/gp0/Views/Home/Home.cshtml
@@ -17,7 +17,7 @@
         <tr>
             <td><a style="color:darkblue" asp-action="UserInfo" asp-controller="Home" asp-route-email="@doc.sender">@doc.sender</a></td>
             <td>@doc.date</td>
-            <td><a style="color:darkslategrey" asp-action="inDocument" asp-controller="Home" asp-route-id="@doc.id">@doc.text</a></td>
+            <td><a style="color:darkblue" asp-action="inDocument" asp-controller="Home" asp-route-id="@doc.id">@doc.text</a></td>
         </tr>
         }
     </tbody>
