--- a/gp0/gp0/Views/Home/OutDocuments.cshtml
+++ b/gp0/gp0/Views/Home/OutDocuments.cshtml
@@ -21,7 +21,7 @@
                 
                 <td><a style="color:darkblue" asp-action="UserInfo" asp-controller="Home" asp-route-email="@doc.receiver">@doc.receiver</a></td>
                 <td>@doc.date</td>
-                <td><a style="color:darkslategrey" asp-action="OutDocument" asp-controller="Home" asp-route-id="@doc.id">@doc.text</a></td>
+                <td><a style="color:darkblue" asp-action="OutDocument" asp-controller="Home" asp-route-id="@doc.id">@doc.text</a></td>
             </tr>
         }
     </tbody>
