--- a/gp0/gp0/Views/Home/inDocument.cshtml
+++ b/gp0/gp0/Views/Home/inDocument.cshtml
@@ -13,7 +13,7 @@
         <input hidden="true" name="id" value=@Model.id />
         <input type="button" asp-controller="Home" asp-action="DeleteInDocument" value="Удалить документ" />
     </div>
-    <div hidden="true">
+    <div hidden="true" id="result">
         <div class="divTableCell"><p id="Success1"></p></div>
         <div class="divTableCell" hidden="true">
             <h3>Информация о сертификате: </h3>
