--- a/gp0/gp0/Views/Shared/HomeLayout.cshtml
+++ b/gp0/gp0/Views/Shared/HomeLayout.cshtml
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="SendDoc">Отправить документ</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="profile">Профиль</a>
+                </li>
                 <li id="info_msg">
                     <a class="nav-link" href="#" id="PlugInEnabledTxt">Проверка</a>
                     <script language="javascript">
