--- a/gp0/gp0/Views/Home/UserInfo.cshtml
+++ b/gp0/gp0/Views/Home/UserInfo.cshtml
@@ -4,6 +4,6 @@
 }
 
 <div>
-    <h3>Email: @Model.email</h3>]
-    <h3>Логин: @Model.login</h3>
+    <h5>Email: @Model.email</h5>
+    <h5>Логин: @Model.login</h5>
 </div>
