--- a/gp0/gp0/Views/Home/OutDocument.cshtml
+++ b/gp0/gp0/Views/Home/OutDocument.cshtml
@@ -10,7 +10,7 @@
         <div>
             <button class="btn btn-secondary btn-block" onclick="CheckDoc('Text')">Проверить подпись</button>
             <input hidden="true" name="id" value=@Model.id />
-            <input class="btn btn-secondary btn-block" style="margin-top: 10px; background-color: darkred" type="button" asp-controller="Home" asp-action="DeleteInDocument" value="Удалить документ" />
+            <input class="btn btn-secondary btn-block" style="margin-top: 10px; background-color: darkred" type="button" asp-controller="Home" asp-action="DeleteInDocument" onclick="location.href='/Home/DeleteInDocument/@Model.id'" value="Удалить документ" />
         </div>
         <div hidden="true" id="result">
             <div class="divTableCellSmall"><h4 id="Success1"></h4></div>
