add admin panel

--- a/gp0/gp0/Views/Shared/AdminLayout.cshtml
+++ b/gp0/gp0/Views/Shared/AdminLayout.cshtml
@@ -28,10 +28,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="CreateUser">Создать пользователя</a>
+                    <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="CreateUser">Создать пользователя</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="GetUsers">Список пользователей</a>
+                    <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="GetUsers">Список пользователей</a>
 @*                 </li> *@
 @*                 <li id="info_msg"> *@
 @*                     <a class="nav-link" href="#" id="PlugInEnabledTxt">Проверка</a> *@
