--- a/gp0/gp0/Views/Home/profile.cshtml
+++ b/gp0/gp0/Views/Home/profile.cshtml
@@ -4,6 +4,8 @@
 }
 <!DOCTYPE html>
 <div>
+    <h5>@Model.full_name</h5>
+    <h5>@Model.position</h5>
     <h5>Email: @Model.email</h5>
     <h5>Логин: @Model.login</h5>
 </div>
